--- a/css/style.css
+++ b/css/style.css
@@ -215,13 +215,14 @@ a:focus {
     position: relative;
     transition: .5s;
     z-index: 999;
+    
 }
 
 .navbar.nav-sticky {
     position: fixed;
     top: 0;
     width: 100%;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
+    box-shadow: 0 2px 5px rgba(51, 50, 50, 0.952);
     transition: .5s;
 }
 
@@ -250,6 +251,13 @@ a:focus {
     transition: none;
 }
 
+.navbar-light .navbar-nav .nav-link {
+    color: black;
+}
+.navbar-light .navbar-nav .nav-link:hover {
+    color: #FDBE33;
+}
+
 .navbar .dropdown-menu {
     margin-top: 0;
     border: 0;
@@ -275,7 +283,7 @@ a:focus {
     }
     
     .page .navbar {
-        background: #20212B !important;
+        background: black!important;
     }
     
     .navbar a.nav-link {
@@ -288,7 +296,7 @@ a:focus {
 @media (max-width: 991.98px) {   
     .navbar {
         padding: 15px;
-        background: #20212B !important;
+        background: white !important;
     }
     
     .navbar a.nav-link {
