--- a/css/style.css
+++ b/css/style.css
@@ -2340,7 +2340,7 @@ header h1{
   margin-left: -1px;
   background: rgb(213,213,213);
   background: -moz-linear-gradient(top, rgba(213,213,213,0) 0%, rgb(213,213,213) 8%, rgb(213,213,213) 92%, rgba(213,213,213,0) 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(30,87,153,1)), color-stop(100%,rgba(125,185,232,1)));
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #003883(30,87,153,1)), color-stop(100%,rgba(125,185,232,1)));
   background: -webkit-linear-gradient(top, rgba(213,213,213,0) 0%, rgb(213,213,213) 8%, rgb(213,213,213) 92%, rgba(213,213,213,0) 100%);
   background: -o-linear-gradient(top, rgba(213,213,213,0) 0%, rgb(213,213,213) 8%, rgb(213,213,213) 92%, rgba(213,213,213,0) 100%);
   background: -ms-linear-gradient(top, rgba(213,213,213,0) 0%, rgb(213,213,213) 8%, rgb(213,213,213) 92%, rgba(213,213,213,0) 100%);
@@ -2356,7 +2356,7 @@ header h1{
   width: 16px;
   height: 10px;
   position: absolute;
-  background: #00c4f3;
+  background: #e6b012;
  
   left: 0;
   right: 0;
@@ -2367,7 +2367,7 @@ header h1{
 }
 
 .timeline .hexa:before {
-  border-bottom: 4px solid #00c4f3;
+  border-bottom: 4px solid #e6b012;
   border-left-width: 8px;
   border-right-width: 8px;
   top: -4px;
@@ -2376,7 +2376,7 @@ header h1{
 .timeline .hexa:after {
   border-left-width: 8px;
   border-right-width: 8px;
-  border-top: 4px solid #00c4f3;
+  border-top: 4px solid #e6b012;
   bottom: -4px;
 }
 
@@ -2449,7 +2449,7 @@ header h1{
 }
 
 .time {
-  background: #00c4f3;
+  background: #ce1127;
   display: inline-block;
   padding: 8px;
 }
