--- a/css/galary_style.css
+++ b/css/galary_style.css
@@ -289,7 +289,7 @@ h2 {
 .masthead {
 	height: 100vh;
 	min-height: 500px;
-	background-image: url("../img/photo-55.jpg");
+	background-image: url("../img/photo-55.JPG");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -304,7 +304,7 @@ h2 {
 .masthead-2 {
 	height: 100vh;
 	min-height: 500px;
-	background-image: url("../img/photo-56.jpg");
+	background-image: url("../img/photo-56.JPG");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -345,7 +345,7 @@ h2 {
 }
 
 .split-image-left {
-	background-image: url("../img/photo-55.jpg");
+	background-image: url("../img/photo-55.JPG");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -353,7 +353,7 @@ h2 {
 }
 
 .split-image-right {
-	background-image: url("../img/photo-56.jpg");
+	background-image: url("../img/photo-56.JPG");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -546,7 +546,7 @@ h2 {
 .spot-2 {
 	height: 100vh;
 	min-height: 500px;
-	background-image: url("../img/photo-40.jpg");
+	background-image: url("../img/photo-40.JPG");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -602,7 +602,7 @@ h2 {
     width: 100%;
     height: 100%;
     object-fit: cover; /* Ensures the video covers the entire section */
-    z-index: -1; /* Places the video behind the content */
+   
 }
 
 
