--- a/css/style.css
+++ b/css/style.css
@@ -345,6 +345,7 @@ a:focus {
         padding: 8px 15px;
         font-size: 16px;
         letter-spacing: 1px;
+        margin-right: 50px;
     }
 }
 
