--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ a:focus {
 .carousel {
     position: relative;
     width: 100%;
-    min-height: 300px;
+    min-height: 500px;
     background: #ffffff;
     margin-bottom: 45px;
 }
@@ -431,6 +431,7 @@ a:focus {
     justify-content: center;
     flex-direction: column;
     z-index: 2;
+    
 }
 
 .carousel .carousel-text h1 {
@@ -2249,11 +2250,19 @@ header h1{
   font-weight: bold;
   margin-top: 0;
 }
+header h4{
+    text-align: center;
+    font-weight: bold;
+    margin-top: 0;
+    color: #FDBE33 ;
+  }
   
- header p{
-   text-align: center;
-   margin-bottom: 0;
- }
+  header img {
+    display: block;
+    margin: 0 auto; /* This will center the image */
+    margin-top: 0;
+    
+}
 
 .hexa{
   border: 0px;
