--- a/css/style.css
+++ b/css/style.css
@@ -216,13 +216,7 @@ a:focus {
     position: relative;
     transition: .5s;
     z-index: 999;
-<<<<<<< HEAD
     
-=======
-    width: 100%;
-    overflow-x: inherit;
-    height: 100px;
->>>>>>> 73666422555f7544318fce1331ff85992ed5c375
 }
 
 .donate-button {
@@ -235,10 +229,6 @@ a:focus {
     text-align: center;
     transition: background-color 0.3s ease, transform 0.3s ease;
     box-shadow: 0 0 15px rgba(0, 0, 255, 0.5); /* Blue glow effect */
-<<<<<<< HEAD
-=======
-
->>>>>>> 73666422555f7544318fce1331ff85992ed5c375
 }
 
 .donate-button span {
@@ -286,13 +276,13 @@ a:focus {
 
 .navbar .navbar-brand {
     margin: 0;
-    width: 700px;
+    width: 800px;
     padding-right: 100px;
 }
 
 .navbar .navbar-brand img {
-    max-width: 550px;
-    max-height: 250px;
+    max-width: 400px;
+    max-height: 40px;
 }
 
 .navbar-dark .navbar-nav .nav-link,
@@ -355,10 +345,6 @@ a:focus {
         padding: 8px 15px;
         font-size: 16px;
         letter-spacing: 1px;
-<<<<<<< HEAD
-=======
-        margin-right: 50px;
->>>>>>> 73666422555f7544318fce1331ff85992ed5c375
     }
 }
 
@@ -375,11 +361,6 @@ a:focus {
     .navbar .dropdown-menu {
         box-shadow: none;
     }
-<<<<<<< HEAD
-=======
-
-    
->>>>>>> 73666422555f7544318fce1331ff85992ed5c375
 }
 
 
@@ -577,6 +558,7 @@ a:focus {
 }
 
 
+
 /*******************************/
 /******* Page Header CSS *******/
 /*******************************/
@@ -584,7 +566,7 @@ a:focus {
     position: relative;
     margin-bottom: 45px;
     padding: 210px 0 90px 0;
-    text-align: end;
+    text-align: center;
     background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/page-header.jpg);
     background-attachment: fixed;
     background-position: center;
@@ -675,6 +657,7 @@ a:focus {
     width: 100%;
     max-width: 700px;
     margin: 0 auto 45px auto;
+   
 }
 
 .section-header p {
@@ -690,6 +673,10 @@ a:focus {
     margin: 0;
     font-size: 45px;
     font-weight: 700;
+    text-align: center;
+}
+.we-are{
+    margin-left: 500px;
 }
 
 @media (max-width: 991.98px) {
@@ -762,6 +749,31 @@ a:focus {
 @media (max-width: 991.98px) {
     .about .section-header {
         margin-top: 30px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .carousel .carousel-text h1 {
+        font-size: 30px;
+    }
+    
+    .carousel .carousel-text .btn {
+        padding: 10px 25px;
+        font-size: 15px;
+        letter-spacing: 0;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .about .msizi1 {
+        font-size: 15px;
+        text-align: center;
+    }
+    
+    .carousel .carousel-text .btn {
+        padding: 8px 20px;
+        font-size: 14px;
+        letter-spacing: 0;
     }
 }
 
@@ -1132,7 +1144,7 @@ a:focus {
 
 .facts .facts-text h3.facts-dollar::after {
     content: "R";
-    left: -18px;
+    right: -18px;
 }
 
 .facts .facts-text p {
