--- a/css/style.css
+++ b/css/style.css
@@ -2364,10 +2364,11 @@ header h1{
   
 }
   
- header p{
+ .start{
    text-align: center;
    margin-bottom: 0;
  }
+
 
 .hexa{
   border: 0px;
@@ -2653,7 +2654,7 @@ header h1{
     width: 800px;
     margin: 0 auto;
     margin-top: 20px;
-    margin-left: 3cm;
+    text-align: center;
   }
 
   .direction-l {
@@ -2715,8 +2716,93 @@ header h1{
 /*hover over grade r image start */
 
 
-/*hover ends*/
+/*Benefits*/
+.service {
+    padding: 30px;
+    background: #fff;
+    -webkit-box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.1);
+    -webkit-transition: .3s all ease-in-out;
+    -o-transition: .3s all ease-in-out;
+    transition: .3s all ease-in-out;
+    top: 0;
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 100%;
+ }
 
 
+    .service:hover {
+      -webkit-box-shadow: 0 8px 50px -5px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 8px 50px -5px rgba(0, 0, 0, 0.1);
+      top: -2px; }
+
+    .service .service-number {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 0 60px;
+      flex: 0 0 60px; }
+
+      .service .service-number span {
+        position: relative;
+        width: 10px;
+        height: 10px;
+        line-height: 50px;
+        border-radius: 10%;
+        background: #ce1127;
+        display: inline-block;
+        color: #fff;
+        text-align: center; }
+
+    .service .service-about *:last-child {
+      margin-bottom: 0; }
+
+    .service .service-about h3 {
+      font-size: 1.2rem;
+      margin-bottom: 10px; }
+  
+  .gal-item {
+    margin-bottom: 30px; }
+  
+  .filters .btn {
+    border-color: transparent;
+    font-size: .8rem;
+    margin: 5px;
+    letter-spacing: .2rem;
+    background: rgba(52, 58, 64, 0.05);
+    color: #343a40;
+    padding: 5px 20px;
+    border-radius: 30px !important;
+    border: none !important;
+    text-transform: uppercase; }
+
+    .filters .btn:hover, 
+    .filters .btn:focus, 
+    .filters .btn:active {
+      border-color: transparent !important;
+      background: rgba(52, 58, 64, 0.3) !important;
+      color: #000; }
+
+    .filters .btn.active {
+      background: #000 !important;
+      color: #fff;
+      border-color: #000 !important; }
+
+      .donation-journey-and-benefits {
+        display: flex;
+        justify-content: space-between;
+        gap: 50px;
+        margin-top: 20px;
+    }
+
+    .timeline-container {
+        flex: 1; /* Takes up available space */
+        max-width: 60%; /* Adjust as needed */
+    }
+    
+    .benefits-container {
+        flex: 1; /* Takes up available space */
+        max-width: 35%; /* Adjust as needed */
+    }
 
 
