--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,30 @@ body {
     padding: 0;
     margin: 0;
 }
+ t
+{
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    background: #fc9b00; 
+    pointer-events: none;
+    animation: animate 3s linear forwards;
+}
+
+@keyframes animate
+{
+    0%
+    {
+        opacity: 1;
+        transform: translate(0,0);
+    }
+    100%
+    {
+        opacity: 0;
+        transform: translate(var(--x),var(--y));
+    }
+}
+
 .ml-auto
 {
     scroll-behavior: smooth;
