--- a/css/style.css
+++ b/css/style.css
@@ -814,7 +814,18 @@ a:focus {
     }
 }
 
+/*---------------------
+  Logo
+  -----------------------*/
+.logo {
+    background: #FDBE33;
+    padding: 100px 20px;
+  }
 
+  .logo__carousel.owl-carousel .owl-item img {
+    width: auto;
+    display: inline-block;
+  }
 /*******************************/
 /********** About CSS **********/
 /*******************************/
@@ -1363,6 +1374,7 @@ a:focus {
 .team .team-item:hover .team-text {
     height: 160px;
 }
+
 
 
 /*******************************/
@@ -2934,4 +2946,80 @@ benefits
 
 
   
+
+/*** Country Start ***/
+/* .country .country-item {
+    position: relative;
+}
+
+.country .country-item::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 58, 102, 0.7);
+    border-radius: 10px;
+    transition: 0.5s;
+    z-index: 1;
+}
+
+.country .country-item:hover::after {
+    height: 100%;
+}
+
+.country .country-item .country-flag {
+    position: absolute;
+    width: 90px; 
+    height: 90px; 
+    border-radius: 50%;
+    top: -45px; 
+    left: 50%; 
+    transform: translateX(-50%);
+    transition: 0.5s;
+    z-index: 2;
+}
+
+.country .country-item .country-flag img {
+    border: 5px solid var(--bs-white);
+    transition: 0.5s;
+}
+
+.country .country-item:hover .country-flag img {
+    border: 5px solid var(--bs-white);
+    transform: rotate(360deg);
+    transition: all 0.5s ease;
+}
+
+.country .country-item .country-name {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.5s;
+    opacity: 0;
+    z-index: 3;
+}
+
+.country .country-item:hover .country-name {
+    opacity: 1;
+}
+
+.country .country-item img {
+    transition: 0.5s;
+}
+
+.country .country-item:hover img {
+    transform: scale(1.2);
+}
+
+.country .country-item .country-name a.fs-4 {
+    transition: 0.5s;
+}
+
+.country .country-item .country-name a.fs-4:hover {
+    color: var(--bs-secondary) !important;
+} */
+/*** Country End ***/
 
