--- a/css/style.css
+++ b/css/style.css
@@ -717,7 +717,7 @@ a:focus {
 
 .page-header h2 {
     position: relative;
-    color: #FDBE33;
+    color: #f3f1eb;
     font-size: 30px; /* Decreased font size */
     font-weight: 700;
     margin-bottom: 0; /* Remove margin to align with underline */
@@ -789,9 +789,6 @@ a:focus {
         font-size: 18px;
     }
 }
-
-
-
 
 
 
@@ -2318,8 +2315,8 @@ a:focus {
     margin-top: 45px;
     padding-top: 90px;
     background: #dc0000;
-    z-index: 10; /* Higher z-index ensures it stays above other elements */
-    padding: 20px 0; /* Add padding if needed */
+    z-index: 1000; /* Higher z-index ensures it stays above other elements */
+    padding: 40px 0; /* Add padding if needed */
 
 }
 
@@ -2347,6 +2344,7 @@ a:focus {
     color: #ffffff;
     transition: .3s;
     text-decoration: none; 
+    
 }
 
 .footer .footer-link a::before {
@@ -2444,6 +2442,13 @@ a:focus {
     text-decoration: none; /* No underline on hover */
     color: #FDBE33; /* Or any other color you prefer */
 }
+
+.footer a:hover {
+    text-decoration: none;
+    color: inherit; /* Prevent color change on hover */
+}
+
+
 
 
 @media (max-width: 767.98px) {
@@ -2999,7 +3004,7 @@ benefits
 
 .close:hover,
 .close:focus {
-    color: #bbb;
+    color: #f8f1f1;
     text-decoration: none;
     cursor: pointer;
 }
@@ -3111,4 +3116,26 @@ benefits
     color: var(--bs-secondary) !important;
 } */
 /*** Country End ***/
+h1.display-4 {
+    margin-top: -90px; /* Adjust this value as needed */
+    font-size: 2.5rem; /* Adjust this size as needed */
+}
+
+.row.portfolio-container {
+    margin-top: -40px; /* Adjust this value as needed */
+}
+h1.display-3 {
+    margin-top: -140px; /* Adjust this value as needed */
+    font-size: 2.5rem; /* Adjust this size as needed */
+}
+
+h1.display-2 {
+    margin-top: -140px; /* Adjust this value as needed */
+    font-size: 2.5rem; /* Adjust this size as needed */
+   
+}
+
+
+
+
 
