--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ a:focus {
         padding: 8px 15px;
         font-size: 19px;
         letter-spacing: 1px;
-        margin-right: 30px;
+        margin-right: 50px;
     }
 
 }
@@ -716,13 +716,14 @@ a:focus {
 
 .page-header h2 {
     position: relative;
-    color: #FDBE33;
-    font-size: 30px; /* Decreased font size */
+    color: white;
+    font-size: 40px; /* Decreased font size */
     font-weight: 700;
     margin-bottom: 0; /* Remove margin to align with underline */
     padding-bottom: 0px; /* Adjust padding to ensure text is on the underline */
     display: inline-block; /* Keeps the underline directly under the text */
     text-align: right; /* Aligns the text to the right */
+    padding-left: 50px;
 }
 
 /*.page-header h2::after {
