--- a/css/style.css
+++ b/css/style.css
@@ -1498,6 +1498,51 @@ a:focus {
     background: #20212B;
 }
 
+.testimonial-text {
+    position: relative;
+    text-align: center; /* Center the content */
+}
+
+.testimonial-text img {
+    width: 100%; /* Ensure the image takes up the full width */
+}
+
+.play-btn {
+    display: inline-block;
+    color: #FDBE33;
+    font-size: 20px;
+    height: 50px;
+    width: 50px;
+    line-height: 50px;
+    text-align: center;
+    border: 1px solid rgba(255, 255, 255, 0.7);
+    border-radius: 50%;
+    position: absolute;
+    top: 50%; /* Center the button vertically */
+    left: 50%; /* Center the button horizontally */
+    transform: translate(-50%, -50%); /* Adjust for the offset */
+}
+/* 
+.close-btn {
+    display: none; 
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    z-index: 1000; /* Ensure it is above other elements 
+}
+
+.video-playing .close-btn {
+    display: block;  Show the close button when video is playing 
+} 
+ */
+
 
 /*******************************/
 /******** Volunteer CSS ********/
