--- a/css/style.css
+++ b/css/style.css
@@ -714,27 +714,23 @@ a:focus {
     background-size: cover;
 }
 
-.page-header h2 {
-    position: relative;
-    color: #f3f1eb;
-    font-size: 40px; /* Decreased font size */
+.page-header .container h2 {
+    text-align: right;
+    color: #ffffff; /* Ensures the text color is white */
+    font-size: 30px;
     font-weight: 700;
-    margin-bottom: 0; /* Remove margin to align with underline */
-    padding-bottom: 0px; /* Adjust padding to ensure text is on the underline */
-    display: inline-block; /* Keeps the underline directly under the text */
-    text-align: right; /* Aligns the text to the right */
-    padding-left: 50px;
+    margin-bottom: 20px;
 }
 
-/*.page-header h2::after {
-    position: absolute;
+.page-header h2::after {
+    position: 100%;
     content: "";
     width: 100px;
-    height: 2px;
+    height: 5px;
     right: 0; /* Position the underline correctly for right-aligned text */
-    /*bottom: 0; *//* Aligns underline with text */
-    /*background: #FDBE33; */
-/*} */
+    bottom: 0; /* Aligns underline with text */
+    background-color: white; /* Changes underline color to white */
+}
 
 .page-header a {
     position: relative;
